# bluerov2_ignition

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile_galactic_garden  README.md  garden.repos  package.xml  requirements.txt  setup.bash
docker/: Dockerfile  README.md  build.sh  run.sh
docker/ardupilot/: Dockerfile  build.sh  run.sh
docker/bluerov2_ignition/: Dockerfile  build.sh  run.sh
docker/galactic_garden/: Dockerfile  build.sh
docker/mavproxy/: Dockerfile  build.sh  run.sh
models/bluerov2/: BlueROV2.md  configs.yaml  model.config  model.sdf  model.sdf.in
models/bluerov2/meshes/: t200-prop-ccw.stl  t200-prop-cw.stl
models/bluerov2_heavy/: BlueROV2Heavy.md  configs.yaml  model.config  model.sdf  model.sdf.in
models/br2_ping/: model.config  model.sdf  model.sdf.in
models/surface/: model.config  model.sdf
models/terrain/: model.config  model.sdf
scripts/: ccw.bash  ccw.sh  cw.sh  down.bash  down.sh  forward.bash  forward.sh  generate_model.py  left.bash  left.sh  stop.sh  up.bash  up.sh
worlds/: bluerov2_heavy_underwater.world  bluerov2_underwater.world  sensor.world  underwater.world
