<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>bluerov2_ignition</name>
  <version>0.5.0</version>
  <description>Model of BlueROV2 that runs in Gazebo Garden</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/clydemcqueen/bluerov2_ignition.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/bluerov2_ignition/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
